k8s/webhook/webhook-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: ocx-webhook
  labels:
    app.kubernetes.io/name: ocx-webhook
    app.kubernetes.io/part-of: ocx-system
  annotations:
    cert-manager.io/inject-ca-from: ocx-system/ocx-webhook-cert
webhooks:
- name: ocx-inject.ocx.dev
  clientConfig:
    service:
      name: ocx-webhook
      namespace: ocx-system
      path: "/mutate"
  rules:
  - operations: ["CREATE", "UPDATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  failurePolicy: Fail
  reinvocationPolicy: Never
  timeoutSeconds: 1
  namespaceSelector:
    matchExpressions:
    - key: ocx.dev/enforce
      operator: In
      values: ["true"]
  objectSelector:
    matchExpressions:
    - key: ocx.dev/enable
      operator: In
      values: ["true"]
